# cleam

./: Cargo.toml  README.md
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
openspec/changes/add-log-event-search/: design.md
openspec/changes/add-log-event-search/specs/log-event-search/: spec.md
openspec/changes/add-search-filter/: proposal.md  tasks.md
openspec/changes/archive/2026-02-23-add-search-filter/: design.md
openspec/changes/archive/2026-02-23-add-search-filter/specs/main-screen-search/: spec.md
openspec/changes/archive/2026-02-28-add-log-event-search/: proposal.md  tasks.md
openspec/changes/archive/2026-03-01-download-event-list/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-01-refactor-app-by-screen/: tasks.md
openspec/changes/refactor-app-by-screen/: design.md  proposal.md  tasks.md
openspec/changes/refactor-app-by-screen/specs/screen-state-separation/: spec.md
openspec/changes/search-filter-enter-confirm/: design.md  proposal.md  tasks.md
openspec/changes/search-filter-enter-confirm/specs/main-screen-search/: spec.md
openspec/specs/event-list-download/: spec.md
openspec/specs/main-screen-search/: spec.md
openspec/specs/shared-client/: spec.md
src/: app.rs  aws.rs  main.rs  tui.rs
src/screen/: event_search.rs  events.rs  group_events.rs  main.rs  mod.rs  viewer.rs
src/ui/: event_search_screen.rs  events_screen.rs  group_events_screen.rs  main_screen.rs  mod.rs  viewer_screen.rs
(+2 files in other folders)
