[package]
name = "cleam"
version = "0.1.0"
edition = "2024"
authors = ["anraku <anraku90@gmail.com>"]
repository = "https://github.com/anraku/cleam"
keywords = ["aws", "log"]
license = "MIT"
readme = "README.md"
description = "Viewing and downloading Amazon CloudWatch Logs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
aws-sdk-cloudwatchlogs = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
jiff = "0.2.21"
